js: one more pass on java syntax upgrade, code cleanup